--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "amqplib": "^0.10.4",
     "axios": "^1.6.8",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
