--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "axios": "^1.6.8",
+    "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-i18next": "^14.1.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
