--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
   "jest": {
     "testEnvironment": "jest-environment-jsdom",
     "transform": {
