--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,7 +60,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs: validate-code
+    # needs: validate-code
     steps:
         - name: Checkout code
           uses: actions/checkout@v2
@@ -87,7 +87,7 @@ jobs:
   build-and-deploy:
     name: Build and Push Docker Img
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
