--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.0",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "type": "module"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
