--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "amqplib": "^0.10.4",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
