--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.0",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "vite-plugin-pwa": "^0.20.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
