--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Smarter Tasks",
-  "name": "Project Management",
+  "short_name": "File Share",
+  "name": "File Share",
   "icons": [
     {
       "src": "favicon.ico",
